styles/listingEdit.module.css
.container {
  padding: 2rem;
  font-size: 1.6rem;
  position: relative;
  top: 6rem;
}
.body {
  border: 1px solid #bebdbd;
  margin-bottom: 10rem;
  margin-top: 5rem;
  text-transform: capitalize;
  min-height: 50vh;
  width: 70%;
}
.header {
  display: grid;
  grid-template-columns: repeat(4, max-content) 1fr max-content;
  width: 100%;
  border: 1px solid #bebdbd;
  border-top: none;
  font-weight: 700;
  background-color: #f2f4f5;
}

.header p {
  padding: 2rem 4rem;
  cursor: pointer;
  height: 100%;
  width: 100%;
  margin: 0%;
}
.header p:hover {
  background-color: rgba(1, 2, 78, 0.76);
  color: #fff;
}

.active {
  background-color: rgba(1, 2, 78, 0.76);
  color: #fff;
}

.btn {
  align-self: center;
  display: flex;
  justify-content: center;
  padding: 0% 2rem;
  border-left: 1px solid #bebdbd;
}

.btn button {
  padding: 1rem 2rem;
  background-color: rgba(1, 2, 78, 0.76);
  color: #f2f4f5;
  border-radius: 5px;
  border: none;
  cursor: pointer;
}

.Listing,
.Attributes,
.Marketing {
  width: 100%;
  margin-left: 2rem;
}

.Listing div,
.Attributes div:not(.BiCheck),
.Marketing div:not(.BiCheck) {
  width: 90%;
}

.inp {
  display: flex;
  align-items: center;
  cursor: pointer;
  width: max-content !important;
}

.BiCheck {
  margin-right: 1rem;
  display: flex;
  align-items: center;
  justify-content: center;
  border: 2px solid #bebdbd;
  border-radius: 2px;
  transition: all 0.2s;
  height: 2rem;
  width: 2rem;
}
.inp svg {
  opacity: 0;
  visibility: hidden;
}
.clicked svg {
  opacity: 1;
  visibility: visible;
}

.clicked .BiCheck {
  background-color: rgba(1, 2, 78, 0.76);
  color: #f2f4f5;
  border: none;
  height: 2rem;
  width: 2rem;
}

.Images {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
  row-gap: 2rem;
  padding: 2rem 0;
  padding-left: 2rem;
}

.bg_image {
  height: 10rem;
  width: 20rem;
  background-position: center;
  background-size: cover;
}
.option {
  display: flex;
  align-items: center;
  cursor: pointer;
  width: max-content !important;
}

.option div {
  height: 1.5rem;
  width: 1.5rem;
  border-radius: 50%;
  border: 1px solid #bebdbd;
  margin-right: 1rem;
  display: flex;
  align-items: center;
  justify-content: center;
}

.option span {
  display: inline-block;
  height: 1rem;
  width: 1rem;
  border-radius: 50%;
  transform: translate(-0.5px, -0.5px);
  transition: all 0.2s;
}

.active_rb span {
  background-color: rgba(1, 2, 78, 0.76);
}

@media only screen and (max-width: 1000px) {
  .body {
    width: 100%;
  }
}
@media only screen and (max-width: 720px) {
  .header {
    grid-template-columns: repeat(4, 1fr);
  }
  .header > * {
    height: 6rem;
  }
  .header > *:not(.btn) {
    border-bottom: 2px solid #bebdbd;
  }
  .btn {
    display: flex;
    align-items: center;
  }
  .header button {
    height: 4rem;
    width: 100%;
  }
  .header p {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 0%;
  }
  .no_content {
    display: none;
  }
}
@media only screen and (max-width: 500px) {
  .opts {
    width: 100% !important;
  }
  .Listing div:not(.option div),
  .Attributes div:not(.BiCheck),
  .Marketing div:not(.BiCheck) {
    width: 96%;
  }
}
@media only screen and (max-width: 400px) {
  .header {
    grid-template-columns: 1fr;
  }
}

